--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
+spring.datasource.url=jdbc:mysql://woah.cb9pcnvydww1.us-east-2.rds.amazonaws.com/woah_community_preprod
+spring.datasource.username=admin
+spring.datasource.password=CL$mbpg!!69
 
+spring.jpa.hibernate.ddl-auto=update
