--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.datasource.url=jdbc:mysql://woah.cb9pcnvydww1.us-east-2.rds.amazonaws.com/woah_community_preprod
 spring.datasource.username=admin
 spring.datasource.password=CL$mbpg!!69
+logging.level.org.springframework.security: DEBUG
 
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.open-in-view=false
